--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+    font-family: sora, sans-serif;
+}
+
 .carousel-container {
     max-height: 700px; /* Default height for desktops */
     /* overflow: hidden; */
